[package]
name = "funbf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.27.0", features = ["event-stream"] }
tokio = { version = "1.36", features = ["full"] }
lazy_static = "1.4.0"
ropey = "1.6.1"